<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">


    <ImageView
        android:id="@+id/ikgb"
        android:layout_width="161dp"
        android:layout_height="167dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/kertas_gunting_batu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ikgb" />

    <ImageView
        android:id="@+id/ipemain1"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginTop="212dp"
        android:contentDescription="@string/pemain1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pemainn" />

    <ImageView
        android:id="@+id/icom"
        android:layout_width="74dp"
        android:layout_height="34dp"
        android:layout_marginTop="228dp"
        android:contentDescription="@string/com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/com1" />

    <ImageView
        android:id="@+id/ibatu1"
        android:backgroundTint="@color/baby_blue"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/batu1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ipemain1"
        app:srcCompat="@drawable/batu" />

    <ImageView
        android:id="@+id/ikertas1"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/kertas1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibatu1"
        app:srcCompat="@drawable/kertas" />

    <ImageView
        android:id="@+id/igunting1"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/gunting1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ikertas1"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/gunting" />

    <ImageView
        android:id="@+id/ibatu2"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/batu2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icom"
        app:srcCompat="@drawable/batu" />

    <ImageView
        android:id="@+id/ikertas2"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/kertas2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibatu2"
        app:srcCompat="@drawable/kertas" />

    <ImageView
        android:id="@+id/igunting2"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/gunting2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ikertas2"
        app:srcCompat="@drawable/gunting" />

    <ImageView
        android:id="@+id/irefresh"
        android:layout_width="71dp"
        android:layout_height="66dp"
        android:contentDescription="@string/refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/igunting2"
        app:layout_constraintVertical_bias="0.904"
        app:srcCompat="@drawable/refresh" />

    <TextView
        android:id="@+id/textstatus"
        android:layout_width="98dp"
        android:layout_height="91dp"
        android:contentDescription="@string/statusvs"
        android:fontFamily="@font/comic_bold"
        android:rotation="-20"
        android:text="@string/VS"
        android:textColor="@color/red"
        android:textSize="90sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ikgb"
        app:layout_constraintVertical_bias="0.328" />


</androidx.constraintlayout.widget.ConstraintLayout>